сделал верстку pixel perfect index.html без учета изображений

--- a/source/index.html
+++ b/source/index.html
@@ -30,11 +30,11 @@
   <script src="pixel-glass/script.js"></script>
   <!-- // Pixel Glass -->
   <title>Cat energy. Функционаьлное питание для котов.</title>
-  <link href="css/normolize.min.css">
+  <link href="css/normolize.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="site-grid">
-  <header class="page-header site-grid__wrapper">
+  <header class="page-header page-header__container site-grid__wrapper">
     <div class="page-header__wrapper">
       <a class="page-header__logo-link">
         <img class="page-header__logo-image"  src="img/logo-mobile.svg" width="191" height="38" alt="Логотип магазина Cat energy">
@@ -96,7 +96,7 @@
               <p class="progress__value">5 кг <span class="progress__type">снижение  веса</span></p>
               <p class="progress__value">60 дней <span class="progress__type progress__type--large-width">затрачено  времени</span></p>
             </div>
-            <p class="example__expenses">Затраты на питание: 15 000 руб.</p>
+            <p class="example__expenses"><span>Затраты на питание:</span> <span>15 000 руб.</span></p>
           </div>
         </div>
       </div>
@@ -105,7 +105,7 @@
           <img class="slider__image slider__image--current" src="img/before-mobile@1x.png" width="320" height="240" alt="Кот до правильного питания">
           <img class="slider__image visually-hidden" src="img/after-mobile@1x.png" width="251" height="240" alt="Кот после правильного питания">
         </div>
-        <div class="page-main__wrapper">
+        <div class="slider__wrapper">
           <div class="slider__buttons">
             <button class="slider__button">Было</button>
             <div class="slider__toggle"></div>
@@ -117,14 +117,14 @@
 
     <section class="page-main__contacts contacts">
       <h2 class="contacts__title visually-hidden">Контакты</h2>
-      <div class="page-main__wrapper">
+      <div class="contacts__inner">
         <div class="contacts__wrapper">
           <p class="contacts__slogan">приглашаем к&nbsp;сотрудничеству дилеров!</p>
-          <p class="contacts__content">ул. Большая Конюшенная, д. 19/8<br><br>Санкт-Петербург</p>
+          <p class="contacts__content"><span>ул. Большая Конюшенная, д. 19/8</span> <span>Санкт-Петербург</span></p>
         </div>
       </div>
       <div class="contacts__map">
-        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A5703b919d7dfa13d1f6baa09ab5b9e7aab6a17f0cfa657cffe8abed4aefb7455&amp;width=100%25&amp;height=100%&amp;lang=ru_RU&amp;scroll=false"></script>
+        <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A5703b919d7dfa13d1f6baa09ab5b9e7aab6a17f0cfa657cffe8abed4aefb7455&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=false"></script>
       </div>
     </section>
   </main>
