--- a/source/form.html
+++ b/source/form.html
@@ -30,10 +30,9 @@
       <p class="program-form__description page-main__wrapper">Заполните анкету и мы подберем  программу питания для вашего кота</p>
       <div class="program-form__container">
         <fieldset class="program-form__item program-form__item--border program-form__about-cat about-cat">
+          <legend class="about-cat__title program-form__item-title visually-hidden">Данные о Вашем коте</legend>
           <div class="page-main__wrapper page-main__wrapper--width-reduce">
             <div class="about-cat__inner">
-              <legend class="about-cat__title program-form__item-title visually-hidden">Данные о Вашем коте</legend>
-
               <div class="about-cat__wrapper">
                 <label class="program-form__label about-cat__label about-cat__label-name" for="about-cat__name">Имя:*</label>
                 <input class="about-cat__input about-cat__input-name" id="about-cat__name" type="text" name="name" placeholder="БАРСИК">
@@ -52,10 +51,10 @@
           </div>
         </fieldset>
         <fieldset class="program-form__item program-form__item--border program-form__purpose purpose">
+          <legend class="purpose__title program-form__item-title visually-hidden">Цель</legend>
           <div class="page-main__wrapper page-main__wrapper--width-reduce">
             <div class="purpose__inner">
               <div class="purpose__wrapper">
-                <legend class="purpose__title program-form__item-title visually-hidden">Цель</legend>
                 <input class="purpose__radio visually-hidden" id="purpose__slim" type="radio" name="purpose-radio" value="slim">
                 <label class="program-form__label purpose__radio-label" for="purpose__slim">Похудение</label>
 
@@ -71,8 +70,8 @@
       </div>
 
       <fieldset class="program-form__item program-form__contacts client-contacts">
+        <legend class="client-contacts__title program-form__item-title">Контактные данные (владельца кота)</legend>
         <div class="page-main__wrapper">
-          <legend class="client-contacts__title program-form__item-title">Контактные данные (владельца кота)</legend>
           <div class="client-contacts__inner">
             <div class="client-contacts__wrapper">
               <label class="program-form__label client-contacts__label client-contacts__label-email">E-mail:*</label>
@@ -98,8 +97,8 @@
       </fieldset>
 
       <fieldset class="program-form__item program-form__optionally optionally">
+        <legend class="optionally__title program-form__item-title">Дополнительно</legend>
         <div class="page-main__wrapper">
-          <legend class="optionally__title program-form__item-title">Дополнительно</legend>
           <div class="optionally__inner">
             <div class="optionally__wrapper">
               <input class="optionally__checkbox visually-hidden" id="sugar-substitute" type="checkbox" name="sugar-substitute">
@@ -121,23 +120,23 @@
               <label class="program-form__label optionally__checkbox-label" for="vitamins" >Витамины</label>
             </div>
           </div>
-        </fieldset>
-        <div class="page-main__wrapper program-form__button-wrapper">
-          <button class="program-form__button-submit button" type="submit">Отправить заявку</button>
-          <p class="program-form__text">* — Обязательные поля</p>
         </div>
-      </form>
+      </fieldset>
+      <div class="page-main__wrapper program-form__button-wrapper">
+        <button class="program-form__button-submit button" type="submit">Отправить заявку</button>
+        <p class="program-form__text">* — Обязательные поля</p>
+      </div>
+    </form>
 
-      <section class="page-main__contacts contacts contacts--bg-gray">
-        <h2 class="contacts__title visually-hidden">Контакты</h2>
-        <div class="page-main__wrapper">
-          <div class="contacts__wrapper">
-            <p class="contacts__slogan">приглашаем к сотрудничеству дилеров!</p>
-            <p class="contacts__content">ул. Большая Конюшенная, д. 19/8  Санкт-Петербург</p>
-          </div>
+    <section class="page-main__contacts contacts contacts--bg-gray">
+      <h2 class="contacts__title visually-hidden">Контакты</h2>
+      <div class="page-main__wrapper">
+        <div class="contacts__wrapper">
+          <p class="contacts__slogan">приглашаем к сотрудничеству дилеров!</p>
+          <p class="contacts__content">ул. Большая Конюшенная, д. 19/8  Санкт-Петербург</p>
         </div>
-        <iframe class="contacts__map" src="https://yandex.ru/map-widget/v1/-/CCuL4L9i" width="1345" height="645"></iframe>
-      </section>
+      </div>
+      <iframe class="contacts__map" src="https://yandex.ru/map-widget/v1/-/CCuL4L9i" width="1345" height="645"></iframe>
     </section>
   </main>
   <footer class="page-footer site-grid__wrapper">
@@ -148,7 +147,7 @@
       <div class="page-footer__social social">
         <a class="social__link" href="#" aria-label="Мы в Vkontakte">
           <span class="social__icon">
-            <svg width="22" height="12" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
+            <svg width="22" height="12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
               <g>
                 <path
                 d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
@@ -172,7 +171,7 @@
         </a>
         <a class="social__link" href="#" aria-label="Мы в Instagram">
           <span class="social__icon">
-            <svg width="16" height="16" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
+            <svg width="16" height="16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
               <style type="text/css">
                 .st0 {
                   fill: #231F20;
@@ -187,7 +186,7 @@
           </span>
         </a>
         <a class="social__link" href="#" aria-label="Мы в Facebook"><span class="social__icon">
-          <svg width="10" height="19" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
+          <svg width="10" height="19" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
             <g>
               <path
               d="M7.1,19H2v-8.8H0V5.8h1.9c-0.1-2,0.2-3.4,1.1-4.4C3.8,0.5,5,0.1,6.5,0L10,0v4.2H7.2C7.1,4.4,7,5,7,5.8H10v4.4H7.1V19z
