сделал адаптивную верстку catalog.html для tablet-width

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,11 +3,38 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Pixel Glass -->
+  <style>
+    HTML {
+      background-repeat: no-repeat;
+      background-position: 50% 0;
+      /* По умолчанию показывается мобильный макет */
+      background-image: url("img/pixelGlass/cat-energy-catalog-mobile.png");
+    }
+    /* Планшет */
+    @media (min-width: 768px) {
+      HTML {
+        /* Планшетный макет */
+        background-image: url("img/pixelGlass/cat-energy-catalog-tablet.png");
+      }
+    }
+    /* Десктоп */
+    @media (min-width: 1440px) {
+      HTML {
+        /* Десктопный макет */
+        background-image: url("img/pixelGlass/cat-energy-catalog-desktop.png");
+      }
+    }
+  </style>
+  <link href="pixel-glass/styles.css" rel="stylesheet">
+  <script src="pixel-glass/script.js"></script>
+  <!-- // Pixel Glass -->
   <title>Cat energy. Каталог продукции.</title>
+  <link href="css/normolize.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="site-grid site-grid__wrapper">
-  <header class="page-header page-header--no-promo site-grid__wrapper">
+  <header class="page-header page-header--no-promo page-header__container site-grid__wrapper">
     <div class="page-header__wrapper">
       <a class="page-header__logo-link" href="index.html">
         <img class="page-header__logo-image"  src="img/logo-mobile.svg" width="191" height="38" alt="Логотип магазина Cat energy">
@@ -29,7 +56,9 @@
         <div class="page-main__product">
           <section class="product">
             <div class="product__content">
-              <img class="product__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка куриного филе Cat energy pro, 500г.">
+              <div class="product__image-container">
+                <img class="product__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка куриного филе Cat energy pro, 500г.">
+              </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy  PRO 500 г</h3>
                 <table class="product__table table-properties">
@@ -55,7 +84,9 @@
         <div class="page-main__product">
           <section class="product">
             <div class="product__content">
-              <img class="product__image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка куриного филе Cat energy pro, 1000г.">
+              <div class="product__image-container">
+                <img class="product__image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка куриного филе Cat energy pro, 1000г.">
+              </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy  PRO 1000 г</h3>
                 <table class="product__table table-properties">
@@ -81,7 +112,9 @@
         <div class="page-main__product">
           <section class="product">
             <div class="product__content">
-              <img class="product__image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка рыбного филе Cat energy pro, 500г.">
+              <div class="product__image-container">
+                <img class="product__image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка рыбного филе Cat energy pro, 500г.">
+              </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy  PRO 500 г</h3>
                 <table class="product__table table-properties">
@@ -107,7 +140,9 @@
         <div class="page-main__product">
           <section class="product">
             <div class="product__content">
-              <img class="product__image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка рыбного филе Cat energy pro, 1000г.">
+              <div class="product__image-container">
+                <img class="product__image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка рыбного филе Cat energy pro, 1000г.">
+              </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy  PRO 1000 г</h3>
                 <table class="product__table table-properties">
@@ -133,7 +168,9 @@
         <div class="page-main__product page-main__product--no-margin">
           <section class="product">
             <div class="product__content">
-              <img class="product__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка гречневой каши Cat energy slim, 500г.">
+              <div class="product__image-container">
+                <img class="product__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка гречневой каши Cat energy slim, 500г.">
+              </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy slim 500 г</h3>
                 <table class="product__table table-properties">
@@ -159,7 +196,9 @@
         <div class="page-main__product page-main__product--no-margin">
           <section class="product">
             <div class="product__content">
-              <img class="product__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка гречневой каши Cat energy slim, 1000г.">
+              <div class="product__image-container">
+                <img class="product__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка гречневой каши Cat energy slim, 1000г.">
+              </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy slim 1000 г</h3>
                 <table class="product__table table-properties">
@@ -185,7 +224,9 @@
         <div class="page-main__product page-main__product--no-margin">
           <section class="product">
             <div class="product__content">
-              <img class="product__image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка рисовой каши Cat energy slim, 500г.">
+              <div class="product__image-container">
+                <img class="product__image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка рисовой каши Cat energy slim, 500г.">
+              </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy slim 500 г</h3>
                 <table class="product__table table-properties">
@@ -207,8 +248,8 @@
             <a class="product__button button" href="#">Заказать</a>
           </section>
         </div>
-        <div class="page-main__product page-main__product--no-margin page-main__more-product more-product">
-          <div class="product more-product__wrapper">
+        <div class="page-main__product page-main__product--alt-height page-main__more-product more-product">
+          <div class="product product--alt-bgcolor more-product__wrapper">
             <div class="more-product__content">
               <p class="more-product__description">Показать еще 100500 товаров</p>
               <p class="more-product__text">На самом деле вкусов гораздо больше!</p>
@@ -223,16 +264,16 @@
       <div class="page-main__wrapper">
         <h2 class="extra-products__title">Дополнительные товары</h2>
         <div class="extra-products__inner">
-          <div>
-            <div class="page-main__extra-product">
-              <section class="extra-product extra-product--display-flex">
+          <div class="extra-products__wrapper">
+            <div class="page-main__extra-product extra-products__item extra-products__item--no-margin">
+              <section class="extra-product">
                 <div class="extra-product__wrapper">
                   <div class="extra-product__content">
                     <h3 class="extra-product__title">Сахарозаменитель</h3>
                     <table class="extra-product__table table-properties">
                       <tr class="table-properties__row">
-                        <td class="table-properties__property">1 упаковка (100г)</td>
-                        <td class="table-properties__value">200 Р.</td>
+                        <td class="table-properties__property table-properties__property--align">1 упаковка (100г)</td>
+                        <td class="table-properties__value table-properties__value--align">200 Р.</td>
                       </tr>
                     </table>
                   </div>
@@ -241,15 +282,15 @@
               </section>
             </div>
 
-            <div class="page-main__extra-product">
+            <div class="page-main__extra-product extra-products__item">
               <section class="extra-product">
                 <div class="extra-product__wrapper">
                   <div class="extra-product__content">
                     <h3 class="extra-product__title">Питьевая вода</h3>
                     <table class="extra-product__table table-properties">
                       <tr class="table-properties__row">
-                        <td class="table-properties__property">5 литров</td>
-                        <td class="table-properties__value">50 Р.</td>
+                        <td class="table-properties__property table-properties__property--align">5 литров</td>
+                        <td class="table-properties__value table-properties__value--align">50 Р.</td>
                       </tr>
                     </table>
                   </div>
@@ -258,15 +299,15 @@
               </section>
             </div>
 
-            <div class="page-main__extra-product">
-              <section class="extra-products__item extra-product">
+            <div class="page-main__extra-product extra-products__item">
+              <section class="extra-product">
                 <div class="extra-product__wrapper">
                   <div class="extra-product__content">
                     <h3 class="extra-product__title">Молоко</h3>
                     <table class="extra-product__table table-properties">
                       <tr class="table-properties__row">
-                        <td class="table-properties__property">1 литр</td>
-                        <td class="table-properties__value">100 Р.</td>
+                        <td class="table-properties__property table-properties__property--align">1 литр</td>
+                        <td class="table-properties__value table-properties__value--align">100 Р.</td>
                       </tr>
                     </table>
                   </div>
@@ -275,15 +316,15 @@
               </section>
             </div>
 
-            <div class="page-main__extra-product">
-              <section class="extra-products__item extra-product">
+            <div class="page-main__extra-product extra-products__item">
+              <section class="extra-product extra-product--border-bottom">
                 <div class="extra-product__wrapper">
                   <div class="extra-product__content">
                     <h3 class="extra-product__title">Витамины</h3>
                     <table class="extra-product__table table-properties">
                       <tr class="table-properties__row">
-                        <td class="table-properties__property">1 упаковка (30 г)</td>
-                        <td class="table-properties__value">300 Р.</td>
+                        <td class="table-properties__property table-properties__property--align">1 упаковка (30 г)</td>
+                        <td class="table-properties__value table-properties__value--align">300 Р.</td>
                       </tr>
                     </table>
                   </div>
@@ -295,8 +336,7 @@
 
           <div class="page-main__extra-product extra-products__item extra-bonus">
             <div class="extra-bonus__wrapper">
-              <p class="extra-bonus__content">Закажите все</p>
-              <p class="extra-bonus__content">и получите чехол для кота в подарок!</p>
+              <p class="extra-bonus__content">Закажите все и&nbsp;получите чехол&nbsp;для кота в подарок!</p>
             </div>
           </div>
         </div>
@@ -305,13 +345,15 @@
 
     <section class="page-main__contacts contacts contacts--bg-gray">
       <h2 class="contacts__title visually-hidden">Контакты</h2>
-      <div class="page-main__wrapper">
+      <div class="contacts__inner">
         <div class="contacts__wrapper">
-          <p class="contacts__slogan">приглашаем к сотрудничеству дилеров!</p>
-          <p class="contacts__content">ул. Большая Конюшенная, д. 19/8  Санкт-Петербург</p>
+          <p class="contacts__slogan">приглашаем к&nbsp;сотрудничеству дилеров!</p>
+          <p class="contacts__content"><span>ул. Большая Конюшенная, д. 19/8</span> <span>Санкт-Петербург</span></p>
         </div>
       </div>
-      <iframe class="contacts__map" src="https://yandex.ru/map-widget/v1/-/CCuL4L9i" width="1345" height="645"></iframe>
+      <div class="contacts__map">
+        <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A5703b919d7dfa13d1f6baa09ab5b9e7aab6a17f0cfa657cffe8abed4aefb7455&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=false"></script>
+      </div>
     </section>
   </main>
 
