сделал адаптивную верстку catalog.html для desktop-width

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -248,13 +248,16 @@
             <a class="product__button button" href="#">Заказать</a>
           </section>
         </div>
+
         <div class="page-main__product page-main__product--alt-height page-main__more-product more-product">
-          <div class="product product--alt-bgcolor more-product__wrapper">
-            <div class="more-product__content">
-              <p class="more-product__description">Показать еще 100500 товаров</p>
-              <p class="more-product__text">На самом деле вкусов гораздо больше!</p>
+          <div class="product product--no-padding product--no-bg more-product__wrapper">
+            <div class="product__wrapper">
+              <div class="more-product__content">
+                <p class="more-product__description">Показать еще 100500 товаров</p>
+                <p class="more-product__text">На самом деле вкусов гораздо больше!</p>
+              </div>
+              <a class="product__button button product__button--gray" href="#" >Показать все</a>
             </div>
-            <a class="product__button button product__button--gray" href="#" >Показать все</a>
           </div>
         </div>
       </div>
@@ -359,12 +362,12 @@
 
   <footer class="page-footer site-grid__wrapper">
     <div class="page-footer__inner">
-      <a class="page-footer__site-title-link" href="#">
+      <a class="page-footer__site-title-link">
         <img class="page-footer__site-title" src="img/logo-footer.svg" width="128" height="24" alt="Магазин Cat energy">
       </a>
       <div class="page-footer__social social">
         <a class="social__link" href="#" aria-label="Мы в Vkontakte">
-          <span class="social__icon">
+          <span class="social__icon social__icon--vk">
             <svg width="22" height="12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
               <g>
                 <path
@@ -388,7 +391,7 @@
           </span>
         </a>
         <a class="social__link" href="#" aria-label="Мы в Instagram">
-          <span class="social__icon">
+          <span class="social__icon social__icon--inst">
             <svg width="16" height="16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
               <style type="text/css">
                 .st0 {
@@ -403,7 +406,7 @@
             </svg>
           </span>
         </a>
-        <a class="social__link" href="#" aria-label="Мы в Facebook"><span class="social__icon">
+        <a class="social__link" href="#" aria-label="Мы в Facebook"><span class="social__icon social__icon--fb">
           <svg width="10" height="19" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
             <g>
               <path
