доделал верстку form.html для mobile-width

--- a/source/form.html
+++ b/source/form.html
@@ -3,7 +3,34 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Pixel Glass -->
+  <style>
+    HTML {
+      background-repeat: no-repeat;
+      background-position: 50% 0;
+      /* По умолчанию показывается мобильный макет */
+      background-image: url("img/pixelGlass/cat-energy-form-mobile.png");
+    }
+    /* Планшет */
+    @media (min-width: 768px) {
+      HTML {
+        /* Планшетный макет */
+        background-image: url("img/pixelGlass/cat-energy-form-tablet.png");
+      }
+    }
+    /* Десктоп */
+    @media (min-width: 1440px) {
+      HTML {
+        /* Десктопный макет */
+        background-image: url("img/pixelGlass/cat-energy-form-desktop.png");
+      }
+    }
+  </style>
+  <link href="pixel-glass/styles.css" rel="stylesheet">
+  <script src="pixel-glass/script.js"></script>
+  <!-- // Pixel Glass -->
   <title>Cat energy. Подбор программы</title>
+  <link href="css/normolize.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="site-grid site-grid__wrapper">
@@ -27,7 +54,7 @@
       <h1 class="page-main__title page-main__title--no-border">Подбор программы</h1>
     </div>
     <form class="page-main__program-form program-form" action="echo.htmlacademy.ru" method="post">
-      <p class="program-form__description page-main__wrapper">Заполните анкету и мы подберем  программу питания для вашего кота</p>
+      <p class="program-form__description page-main__wrapper">Заполните анкету и мы подберем программу&nbsp;питания для вашего кота</p>
       <div class="program-form__container">
         <fieldset class="program-form__item program-form__item--border program-form__about-cat about-cat">
           <legend class="about-cat__title program-form__item-title visually-hidden">Данные о Вашем коте</legend>
@@ -70,10 +97,10 @@
       </div>
 
       <fieldset class="program-form__item program-form__contacts client-contacts">
-        <legend class="client-contacts__title program-form__item-title">Контактные данные (владельца кота)</legend>
+        <legend class="client-contacts__title program-form__item-title"><span>Контактные данные (владельца кота)</span></legend>
         <div class="page-main__wrapper">
           <div class="client-contacts__inner">
-            <div class="client-contacts__wrapper">
+            <div class="client-contacts__wrapper client-contacts__wrapper--no-margin">
               <label class="program-form__label client-contacts__label client-contacts__label-email">E-mail:*</label>
               <input class="client-contacts__input client-contacts__input-email" type="text" name="client-name" placeholder="KUKLACHEV@GMAIL.COM">
             </div>
@@ -97,7 +124,7 @@
       </fieldset>
 
       <fieldset class="program-form__item program-form__optionally optionally">
-        <legend class="optionally__title program-form__item-title">Дополнительно</legend>
+        <legend class="optionally__title program-form__item-title"><span>Дополнительно</span></legend>
         <div class="page-main__wrapper">
           <div class="optionally__inner">
             <div class="optionally__wrapper">
@@ -130,13 +157,15 @@
 
     <section class="page-main__contacts contacts contacts--bg-gray">
       <h2 class="contacts__title visually-hidden">Контакты</h2>
-      <div class="page-main__wrapper">
+      <div class="contacts__inner">
         <div class="contacts__wrapper">
-          <p class="contacts__slogan">приглашаем к сотрудничеству дилеров!</p>
-          <p class="contacts__content">ул. Большая Конюшенная, д. 19/8  Санкт-Петербург</p>
+          <p class="contacts__slogan">приглашаем к&nbsp;сотрудничеству дилеров!</p>
+          <p class="contacts__content"><span>ул. Большая Конюшенная, д. 19/8</span> <span>Санкт-Петербург</span></p>
         </div>
       </div>
-      <iframe class="contacts__map" src="https://yandex.ru/map-widget/v1/-/CCuL4L9i" width="1345" height="645"></iframe>
+      <div class="contacts__map">
+        <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A5703b919d7dfa13d1f6baa09ab5b9e7aab6a17f0cfa657cffe8abed4aefb7455&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=false"></script>
+      </div>
     </section>
   </main>
   <footer class="page-footer site-grid__wrapper">
