--- a/source/form.html
+++ b/source/form.html
@@ -34,17 +34,17 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="site-grid site-grid__wrapper">
-  <header class="page-header page-header--no-promo site-grid__wrapper">
+  <header class="page-header page-header--no-promo page-header__container site-grid__wrapper">
     <div class="page-header__wrapper">
       <a class="page-header__logo-link" href="index.html">
         <img class="page-header__logo-image"  src="img/logo-mobile.svg" width="191" height="38" alt="Логотип магазина Cat energy">
       </a>
       <button class="burger-menu burger-menu--active" aria-label="Главное меню"></button>
     </div>
-    <nav class="page-header__main-menu main-menu">
+    <nav class="page-header__main-menu main-menu ">
       <ul class="main-menu__list">
         <li class="main-menu__item"><a class="main-menu__link main-menu__link--no-promo" href="index.html">Главная</a></li>
-        <li class="main-menu__item"><a class="main-menu__link main-menu__link--no-promo" href="catalog.html">Каталог продукции</a></li>
+        <li class="main-menu__item main-menu__item--no-promo"><a class="main-menu__link main-menu__link--no-promo" href="catalog.html">Каталог продукции</a></li>
         <li class="main-menu__item main-menu__item--current main-menu__item--no-promo"><a class="main-menu__link main-menu__link--no-promo">Подбор программы</a></li>
       </ul>
     </nav>
@@ -101,12 +101,12 @@
         <div class="page-main__wrapper">
           <div class="client-contacts__inner">
             <div class="client-contacts__wrapper client-contacts__wrapper--no-margin">
-              <label class="program-form__label client-contacts__label client-contacts__label-email">E-mail:*</label>
+              <label class="program-form__label client-contacts__label">E-mail:*</label>
               <input class="client-contacts__input client-contacts__input-email" type="text" name="client-name" placeholder="KUKLACHEV@GMAIL.COM">
             </div>
 
             <div class="client-contacts__wrapper">
-              <label class="program-form__label client-contacts__label client-contacts__label-phone ">Телефон:*</label>
+              <label class="program-form__label client-contacts__label">Телефон:*</label>
               <input class="client-contacts__input client-contacts__input-phone" type="text" name="phone" placeholder="8 (960) 900-60-90">
             </div>
           </div>
