--- a/source/index.html
+++ b/source/index.html
@@ -115,6 +115,7 @@
             </div>
           </div>
         </div>
+      </div>
       </section>
 
       <section class="page-main__contacts contacts">
