--- a/source/catalog.html
+++ b/source/catalog.html
@@ -57,7 +57,7 @@
           <section class="product">
             <div class="product__content">
               <div class="product__image-container">
-                <img class="product__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка куриного филе Cat energy pro, 500г.">
+                <img class="product__image" src="img/chicken-small-mobile@1x.jpg" alt="Упаковка куриного филе Cat energy pro, 500г.">
               </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy  PRO 500 г</h3>
@@ -85,7 +85,7 @@
           <section class="product">
             <div class="product__content">
               <div class="product__image-container">
-                <img class="product__image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка куриного филе Cat energy pro, 1000г.">
+                <img class="product__image" src="img/chicken-big-mobile@1x.jpg" alt="Упаковка куриного филе Cat energy pro, 1000г.">
               </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy  PRO 1000 г</h3>
@@ -113,7 +113,7 @@
           <section class="product">
             <div class="product__content">
               <div class="product__image-container">
-                <img class="product__image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка рыбного филе Cat energy pro, 500г.">
+                <img class="product__image" src="img/fish-small-mobile@1x.jpg" alt="Упаковка рыбного филе Cat energy pro, 500г.">
               </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy  PRO 500 г</h3>
@@ -141,7 +141,7 @@
           <section class="product">
             <div class="product__content">
               <div class="product__image-container">
-                <img class="product__image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка рыбного филе Cat energy pro, 1000г.">
+                <img class="product__image" src="img/fish-big-mobile@1x.jpg" alt="Упаковка рыбного филе Cat energy pro, 1000г.">
               </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy  PRO 1000 г</h3>
@@ -169,7 +169,7 @@
           <section class="product">
             <div class="product__content">
               <div class="product__image-container">
-                <img class="product__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка гречневой каши Cat energy slim, 500г.">
+                <img class="product__image" src="img/buckwheat-small-mobile@1x.jpg" alt="Упаковка гречневой каши Cat energy slim, 500г.">
               </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy slim 500 г</h3>
@@ -197,7 +197,7 @@
           <section class="product">
             <div class="product__content">
               <div class="product__image-container">
-                <img class="product__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка гречневой каши Cat energy slim, 1000г.">
+                <img class="product__image" src="img/buckwheat-big-mobile@1x.jpg" alt="Упаковка гречневой каши Cat energy slim, 1000г.">
               </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy slim 1000 г</h3>
@@ -225,7 +225,7 @@
           <section class="product">
             <div class="product__content">
               <div class="product__image-container">
-                <img class="product__image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка рисовой каши Cat energy slim, 500г.">
+                <img class="product__image" src="img/rice-small-mobile@1x.jpg" alt="Упаковка рисовой каши Cat energy slim, 500г.">
               </div>
               <div class="product__container">
                 <h3 class="product__title">Cat Energy slim 500 г</h3>
@@ -362,7 +362,7 @@
 
   <footer class="page-footer site-grid__wrapper">
     <div class="page-footer__inner">
-      <a class="page-footer__site-title-link">
+      <a class="page-footer__site-title-link" href="index.html">
         <img class="page-footer__site-title" src="img/logo-footer.svg" width="128" height="24" alt="Магазин Cat energy">
       </a>
       <div class="page-footer__social social">
@@ -418,14 +418,13 @@
         </span>
       </a>
     </div>
-    <div class="page-footer__copyright copyright">
-      <a class="copyright__company" href="#">HTML Academy</a>
-      <a class="copyright__logo" href="#" aria-label="Ссылка на сайт htmlacademy.ru">
-        <svg width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="10 10 40 40">
-          <path fill="#666666" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
-        </svg>
-      </a>
-    </div>
+      <div class="page-footer__copyright copyright">
+        <a class="copyright__company" href="#">HTML Academy
+          <svg class="copyright__logo" width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="10 10 40 40">
+            <path fill="#666666" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
+          </svg>
+        </a>
+      </div>
   </div>
 </footer>
 </body>
