--- a/source/form.html
+++ b/source/form.html
@@ -62,17 +62,17 @@
             <div class="about-cat__inner">
               <div class="about-cat__wrapper">
                 <label class="program-form__label about-cat__label about-cat__label-name" for="about-cat__name">Имя:*</label>
-                <input class="about-cat__input about-cat__input-name" id="about-cat__name" type="text" name="name" placeholder="БАРСИК">
+                <input class="about-cat__input about-cat__input-name program-form__input" id="about-cat__name" type="text" name="name" placeholder="БАРСИК" required>
               </div>
 
               <div class="about-cat__wrapper">
                 <label class="program-form__label about-cat__label about-cat__label-weight" for="about-cat__weight">Вес (кг):*</label>
-                <input class="about-cat__input about-cat__input-weight" id="about-cat__weight" type="text" name="weight" placeholder="7">
+                <input class="about-cat__input about-cat__input-weight program-form__input" id="about-cat__weight" type="text" name="weight" placeholder="7" required>
               </div>
 
               <div class="about-cat__wrapper">
                 <label class="program-form__label about-cat__label about-cat__label-age" for="about-cat__age">Возраст (лет):</label>
-                <input class="about-cat__input about-cat__input-age" id="about-cat__age" type="text" name="age" placeholder="7">
+                <input class="about-cat__input about-cat__input-age program-form__input" id="about-cat__age" type="text" name="age" placeholder="7" required>
               </div>
             </div>
           </div>
@@ -82,14 +82,14 @@
           <div class="page-main__wrapper page-main__wrapper--width-reduce">
             <div class="purpose__inner">
               <div class="purpose__wrapper">
-                <input class="purpose__radio visually-hidden" id="purpose__slim" type="radio" name="purpose-radio" value="slim">
-                <label class="program-form__label purpose__radio-label" for="purpose__slim">Похудение</label>
+                <input class="purpose__radio program-form__radio-input visually-hidden" id="purpose__slim" type="radio" name="purpose-radio" value="slim">
+                <label class="program-form__label purpose__radio-label program-form__radio-btn" for="purpose__slim">Похудение</label>
 
-                <input class="purpose__radio visually-hidden" id="purpose__muscle" type="radio" name="purpose-radio" value="muscle">
-                <label class="program-form__label purpose__radio-label" for="purpose__muscle">Набор массы</label>
+                <input class="purpose__radio program-form__radio-input visually-hidden" id="purpose__muscle" type="radio" name="purpose-radio" value="muscle">
+                <label class="program-form__label purpose__radio-label program-form__radio-btn" for="purpose__muscle">Набор массы</label>
 
-                <input class="purpose__radio visually-hidden" id="purpose__advice" type="radio" name="purpose-radio" value="advice">
-                <label class="program-form__label purpose__radio-label" for="purpose__advice">Не знаю (Нужен ваш совет)</label>
+                <input class="purpose__radio program-form__radio-input visually-hidden" id="purpose__advice" type="radio" name="purpose-radio" value="advice">
+                <label class="program-form__label purpose__radio-label program-form__radio-btn" for="purpose__advice">Не знаю (Нужен ваш совет)</label>
               </div>
             </div>
           </div>
@@ -100,14 +100,25 @@
         <legend class="client-contacts__title program-form__item-title"><span>Контактные данные (владельца кота)</span></legend>
         <div class="page-main__wrapper">
           <div class="client-contacts__inner">
-            <div class="client-contacts__wrapper client-contacts__wrapper--no-margin">
+            <div class="client-contacts__wrapper client-contacts__wrapper--mail client-contacts__wrapper--no-margin">
               <label class="program-form__label client-contacts__label client-contacts__label--email-margin" for="input__email">E-mail:*</label>
-              <input class="client-contacts__input client-contacts__input-email" id="input__email" type="text" name="client-name" placeholder="KUKLACHEV@GMAIL.COM">
+              <input class="client-contacts__input client-contacts__input-email program-form__input" id="input__email" type="text" name="client-name" placeholder="KUKLACHEV@GMAIL.COM" required>
+              <svg class="client-contacts__input-email--icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="13" x="0px" y="0px" viewBox="0 0 17 13" style="enable-background:new 0 0 17 13;" xml:space="preserve">
+  <path class="client-contacts__email-icon" fill="#222222" d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z"/>
+</svg>
             </div>
 
-            <div class="client-contacts__wrapper">
+            <div class="client-contacts__wrapper client-contacts__wrapper--phone">
               <label class="program-form__label client-contacts__label client-contacts__label--phone-margin" for="input__phone">Телефон:*</label>
-              <input class="client-contacts__input client-contacts__input-phone" id="input__phone" type="text" name="phone" placeholder="8 (960) 900-60-90">
+              <input class="client-contacts__input client-contacts__input-phone program-form__input" id="input__phone" type="text" name="phone" placeholder="8 (960) 900-60-90" required>
+              <svg class="client-contacts__input-phone--icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;" xml:space="preserve">
+  <path fill="#222222" d="M17.9,9.4H9.4v1.2h8.5l-2.1,2.1l0.9,0.9l3.1-3.1c0.2-0.2,0.2-0.6,0-0.9l-3.1-3.1l-0.9,0.9L17.9,9.4z"/>
+                <path fill="#222222"
+                  d="M8.1,19.4v-6.2c0-0.3-0.3-0.6-0.6-0.6H4.4l0,0H3.1l0,0c0,0.7,0.6,1.2,1.2,1.2h2.5v5H3.1c-1,0.1-1.8-0.7-1.9-1.7
+  c0-0.1,0-0.1,0-0.2V3.1c0-1,0.8-1.8,1.7-1.8c0.1,0,0.1,0,0.2,0h3.7v5H4.4c-0.7,0-1.2,0.6-1.2,1.2h4.4c0.3,0,0.6-0.3,0.6-0.6V0.6
+  C8.1,0.3,7.8,0,7.5,0H3.1C1.5-0.1,0.1,1.2,0,2.9C0,3,0,3.1,0,3.1v13.7c-0.1,1.7,1.2,3.1,2.9,3.1c0.1,0,0.2,0,0.2,0h4.4
+  C7.8,20,8.1,19.7,8.1,19.4z"/>
+</svg>
             </div>
           </div>
 
@@ -128,23 +139,23 @@
         <div class="page-main__wrapper">
           <div class="optionally__inner">
             <div class="optionally__wrapper">
-              <input class="optionally__checkbox visually-hidden" id="sugar-substitute" type="checkbox" name="sugar-substitute">
-              <label class="program-form__label optionally__checkbox-label" for="sugar-substitute" >Сахарозаменитель</label>
+              <input class="optionally__checkbox program-form__checkbox-input visually-hidden" id="sugar-substitute" type="checkbox" name="sugar-substitute">
+              <label class="program-form__label optionally__checkbox-label program-form__checkbox-btn" for="sugar-substitute" >Сахарозаменитель</label>
             </div>
 
             <div class="optionally__wrapper">
-              <input class="optionally__checkbox visually-hidden" id="water" type="checkbox" name="water" checked disabled>
-              <label class="program-form__label optionally__checkbox-label" for="water" >Питьевая вода</label>
+              <input class="optionally__checkbox program-form__checkbox-input visually-hidden" id="water" type="checkbox" name="water" checked>
+              <label class="program-form__label optionally__checkbox-label program-form__checkbox-btn" for="water" >Питьевая вода</label>
             </div>
 
             <div class="optionally__wrapper">
-              <input class="optionally__checkbox visually-hidden" id="milk" type="checkbox" name="milk">
-              <label class="program-form__label optionally__checkbox-label" for="milk" >Молоко</label>
+              <input class="optionally__checkbox program-form__checkbox-input visually-hidden" id="milk" type="checkbox" name="milk">
+              <label class="program-form__label optionally__checkbox-label program-form__checkbox-btn" for="milk" >Молоко</label>
             </div>
 
             <div class="optionally__wrapper">
-              <input class="optionally__checkbox visually-hidden" id="vitamins" type="checkbox" name="sugar-substitute">
-              <label class="program-form__label optionally__checkbox-label" for="vitamins" >Витамины</label>
+              <input class="optionally__checkbox program-form__checkbox-input visually-hidden" id="vitamins" type="checkbox" name="sugar-substitute">
+              <label class="program-form__label optionally__checkbox-label program-form__checkbox-btn" for="vitamins" >Витамины</label>
             </div>
           </div>
         </div>
@@ -170,7 +181,7 @@
   </main>
   <footer class="page-footer site-grid__wrapper">
     <div class="page-footer__inner">
-      <a class="page-footer__site-title-link">
+      <a class="page-footer__site-title-link" href="index.html">
         <img class="page-footer__site-title" src="img/logo-footer.svg" width="128" height="24" alt="Магазин Cat energy">
       </a>
       <div class="page-footer__social social">
@@ -227,9 +238,8 @@
       </a>
     </div>
     <div class="page-footer__copyright copyright">
-      <a class="copyright__company" href="#">HTML Academy</a>
-      <a class="copyright__logo" href="#" aria-label="Ссылка на сайт htmlacademy.ru">
-        <svg width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="10 10 40 40">
+      <a class="copyright__company" href="#">HTML Academy
+        <svg class="copyright__logo" width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="10 10 40 40">
           <path fill="#666666" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
         </svg>
       </a>
