--- a/source/index.html
+++ b/source/index.html
@@ -59,8 +59,7 @@
       </section>
     </div>
     <div class="page-main__wrapper">
-      <section class="page-main__categories categories">
-        <h2 class="categories__title visually-hidden">Категории</h2>
+      <div class="page-main__categories categories">
         <section class="categories__item categories-item categories-slim">
           <h3 class="categories-item__title categories-slim__image">Похудение</h3>
           <p class="categories-item__about">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
@@ -72,7 +71,7 @@
           Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
           <a class="categories-item__button categories-button" href="#">Каталог pro</a>
         </section>
-      </section>
+      </div>
     </div>
     <div class="page-main__wrapper">
       <section class="page-main__advantages advantages">
