--- a/source/catalog.html
+++ b/source/catalog.html
@@ -32,6 +32,11 @@
   <title>Cat energy. Каталог продукции.</title>
   <link href="css/normolize.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <script>
+    // Picture element HTML5 shiv
+    document.createElement( "picture" );
+  </script>
+  <script src="picturefill.min.js" async></script>
 </head>
 <body class="site-grid site-grid__wrapper">
   <header class="page-header page-header--no-promo page-header__container site-grid__wrapper">
@@ -66,7 +71,7 @@
 
                   <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x"/>
 
-                  <img class="product__image" src="img/chicken-small-mobile@1x.jpg" source="img/chicken-small-desktop@2x.jpg 2x" alt="Упаковка куриного филе Cat energy pro, 500г.">
+                  <img class="product__image" src="img/chicken-small-mobile@1x.jpg" source="img/chicken-small-mobile@2x.jpg 2x" alt="Упаковка куриного филе Cat energy pro, 500г.">
                 </picture>
               </div>
               <div class="product__container">
@@ -100,7 +105,7 @@
 
                   <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x"/>
 
-                  <img class="product__image" src="img/chicken-big-mobile@1x.jpg" source="img/chicken-big-desktop@2x.jpg 2x" alt="Упаковка куриного филе Cat energy pro, 1000г.">
+                  <img class="product__image" src="img/chicken-big-mobile@1x.jpg" source="img/chicken-big-mobile@2x.jpg 2x" alt="Упаковка куриного филе Cat energy pro, 1000г.">
                 </picture>
               </div>
               <div class="product__container">
@@ -134,7 +139,7 @@
 
                   <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x"/>
 
-                  <img class="product__image" src="img/fish-small-mobile@1x.jpg" source="img/fish-small-desktop@2x.jpg 2x" alt="Упаковка рыбного филе Cat energy pro, 500г.">
+                  <img class="product__image" src="img/fish-small-mobile@1x.jpg" source="img/fish-small-mobile@2x.jpg 2x" alt="Упаковка рыбного филе Cat energy pro, 500г.">
                 </picture>
               </div>
               <div class="product__container">
@@ -172,9 +177,7 @@
                   "img/fish-big-tablet@1x.png 1x,
                   img/fish-big-tablet@2x.png 2x"/>
 
-                  <img class="product__image" src=
-                  "img/fish-big-mobile@1x.jpg"
-                  source="img/fish-big-desktop@2x.jpg 2x"
+                  <img class="product__image" src="img/fish-big-mobile@1x.jpg" source="img/fish-big-mobile@2x.jpg 2x"
 
                   alt="Упаковка рыбного филе Cat energy pro, 1000г.">
                 </picture>
@@ -215,8 +218,7 @@
                   img/buckwheat-small-tablet@2x.png 2x"/>
 
                   <img class="product__image" src=
-                  "img/buckwheat-small-mobile@1x.jpg"
-                  source="img/buckwheat-small-desktop@2x.jpg 2x"
+                  "img/buckwheat-small-mobile@1x.jpg" source="img/buckwheat-small-mobile@2x.jpg 2x"
 
                   alt="Упаковка гречневой каши Cat energy slim, 500г.">
                 </picture>
@@ -257,8 +259,7 @@
                   img/buckwheat-big-tablet@2x.png 2x"/>
 
                   <img class="product__image" src=
-                  "img/buckwheat-big-mobile@1x.jpg"
-                  source="img/buckwheat-big-desktop@2x.jpg 2x"
+                  "img/buckwheat-big-mobile@1x.jpg" source="img/buckwheat-big-mobile@2x.jpg 2x"
 
                   alt="Упаковка гречневой каши Cat energy slim, 1000г.">
                 </picture>
@@ -299,8 +300,7 @@
                   img/rice-small-tablet@2x.png 2x"/>
 
                   <img class="product__image" src=
-                  "img/rice-small-mobile@1x.jpg"
-                  source="img/rice-small-desktop@2x.jpg 2x"
+                  "img/rice-small-mobile@1x.jpg" source="img/rice-small-mobile@2x.jpg 2x"
 
                   alt="Упаковка рисовой каши Cat energy slim, 500г.">
                 </picture>
