--- a/source/form.html
+++ b/source/form.html
@@ -32,6 +32,11 @@
   <title>Cat energy. Подбор программы</title>
   <link href="css/normolize.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <script>
+    // Picture element HTML5 shiv
+    document.createElement( "picture" );
+  </script>
+  <script src="picturefill.min.js" async></script>
 </head>
 <body class="site-grid site-grid__wrapper">
   <header class="page-header page-header--no-promo page-header__container site-grid__wrapper">
