--- a/source/index.html
+++ b/source/index.html
@@ -32,6 +32,11 @@
   <title>Cat energy. Функционаьлное питание для котов.</title>
   <link href="css/normolize.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <script>
+    // Picture element HTML5 shiv
+    document.createElement( "picture" );
+  </script>
+  <script src="picturefill.min.js" async></script>
 </head>
 <body class="site-grid">
   <header class="page-header page-header__container site-grid__wrapper">
