изменил outline у textarea

--- a/source/form.html
+++ b/source/form.html
@@ -138,7 +138,7 @@
         <div class="page-main__wrapper">
           <label class="comment__title program-form__item-title" for="user-comment">Комментарий</label>
           <div class="comment__inner">
-            <textarea class="comment__text" id="user-comment" rows="6" cols="32" placeholder="РАССКАЖИТЕ ОБО ВСЕХ ПОВАДКАХ КОТА"></textarea>
+            <textarea class="comment__text program-form__input" id="user-comment" rows="6" cols="32" placeholder="РАССКАЖИТЕ ОБО ВСЕХ ПОВАДКАХ КОТА"></textarea>
           </div>
         </div>
       </fieldset>
