поправил верстку для ie11

--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
     // Picture element HTML5 shiv
     document.createElement( "picture" );
   </script>
-  <script src="picturefill.min.js" async></script>
+  <script src="js/picturefill.min.js" async></script>
 </head>
 <body class="site-grid">
   <header class="page-header page-header__container site-grid__wrapper">
