--- a/source/form.html
+++ b/source/form.html
@@ -36,7 +36,7 @@
     // Picture element HTML5 shiv
     document.createElement( "picture" );
   </script>
-  <script src="picturefill.min.js" async></script>
+  <script src="js/picturefill.min.js" async></script>
 </head>
 <body class="site-grid site-grid__wrapper">
   <header class="page-header page-header--no-promo page-header__container site-grid__wrapper">
