--- a/source/catalog.html
+++ b/source/catalog.html
@@ -86,9 +86,9 @@
           <img class="page-header__logo-image"  src="img/logo-mobile.svg" width="191" height="38" alt="Перейти на главную страницу">
         </picture>
       </a>
-      <button class="burger-menu burger-menu--active" aria-label="Главное меню"></button>
+      <button class="burger-menu burger-menu--closed burger-menu--no-js" aria-label="Главное меню"></button>
     </div>
-    <nav class="page-header__main-menu main-menu ">
+    <nav class="page-header__main-menu main-menu main-menu--closed main-menu--no-js">
       <ul class="main-menu__list">
         <li class="main-menu__item"><a class="main-menu__link main-menu__link--no-promo" href="index.html">Главная</a></li>
         <li class="main-menu__item main-menu__item--current main-menu__item--no-promo"><a class="main-menu__link main-menu__link--no-promo">Каталог продукции</a></li>
@@ -619,5 +619,6 @@
       </div>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 </html>
