--- a/source/index.html
+++ b/source/index.html
@@ -77,25 +77,27 @@
     </symbol>
   </svg>
   <div class="site-grid__wrapper site-grid__wrapper--background-header">
-    <header class="page-header page-header__container site-grid__wrapper">
-      <div class="page-header__wrapper">
-        <a class="page-header__logo-link">
-          <picture>
-            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg"/>
-            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg"/>
-            <img class="page-header__logo-image"  src="img/logo-mobile.svg" width="191" height="38" alt="Логотип магазина Cat energy">
-          </picture>
-        </a>
-        <button class="burger-menu burger-menu--closed burger-menu--no-js" aria-label="Главное меню"></button>
-      </div>
-      <nav class="page-header__main-menu main-menu main-menu--closed main-menu--no-js">
-        <ul class="main-menu__list">
-          <li class="main-menu__item main-menu__item--current"><a class="main-menu__link">Главная</a></li>
-          <li class="main-menu__item "><a class="main-menu__link" href="catalog.html">Каталог продукции</a></li>
-          <li class="main-menu__item"><a class="main-menu__link" href="form.html">Подбор программы</a></li>
-        </ul>
-      </nav>
-    </header>
+    <div class="site-grid__wrapper--background-img-header">
+      <header class="page-header page-header__container site-grid__wrapper">
+        <div class="page-header__wrapper">
+          <a class="page-header__logo-link">
+            <picture>
+              <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg"/>
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg"/>
+              <img class="page-header__logo-image"  src="img/logo-mobile.svg" width="191" height="38" alt="Логотип магазина Cat energy">
+            </picture>
+          </a>
+          <button class="burger-menu burger-menu--closed burger-menu--no-js" aria-label="Главное меню"></button>
+        </div>
+        <nav class="page-header__main-menu main-menu main-menu--closed main-menu--no-js">
+          <ul class="main-menu__list">
+            <li class="main-menu__item main-menu__item--current"><a class="main-menu__link">Главная</a></li>
+            <li class="main-menu__item "><a class="main-menu__link" href="catalog.html">Каталог продукции</a></li>
+            <li class="main-menu__item"><a class="main-menu__link" href="form.html">Подбор программы</a></li>
+          </ul>
+        </nav>
+      </header>
+    </div>
   </div>
   <main class="page-main site-grid__wrapper">
     <div class="site-grid__wrapper site-grid__wrapper--background-promo">
