--- a/source/form.html
+++ b/source/form.html
@@ -30,7 +30,7 @@
   <script src="pixel-glass/script.js"></script>
   <!-- // Pixel Glass -->
   <title>Cat energy. Подбор программы</title>
-  <link href="css/normolize.min.css" rel="stylesheet">
+  <link href="css/normalize.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <script>
     // Picture element HTML5 shiv
