поправил ошибки валидатора и html tree

--- a/source/form.html
+++ b/source/form.html
@@ -83,7 +83,7 @@
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg"/>
           <source media="(min-width: 768px)" srcset="img/logo-tablet.svg"/>
-          <img class="page-header__logo-image"  src="img/logo-mobile.svg" width="191" height="38" alt="Перейти на главную страницу" role="img">
+          <img class="page-header__logo-image"  src="img/logo-mobile.svg" width="191" height="38" alt="Перейти на главную страницу">
         </picture>
       </a>
       <button class="burger-menu burger-menu--closed burger-menu--no-js" aria-label="Главное меню"></button>
@@ -229,26 +229,26 @@
   <footer class="page-footer site-grid__wrapper">
     <div class="page-footer__inner">
       <a class="page-footer__site-title-link" href="index.html">
-        <img class="page-footer__site-title" src="img/logo-footer.svg" width="128" height="24" alt="Магазин Cat energy">
+        <img class="page-footer__site-title" src="img/logo-footer.svg" width="128" height="24" alt="Перейти на главную страницу">
       </a>
       <div class="page-footer__social social">
         <a class="social__link" href="#" aria-label="Мы в Vkontakte">
-          <span class="social__icon social__icon--vk">
-            <svg class="social__icon--vk" width="22" height="12">
+          <span class="social__icon">
+            <svg class="social__icon-vk" width="22" height="12">
               <use xlink:href="#social__icon--vk"/>
             </svg>
           </span>
         </a>
         <a class="social__link" href="#" aria-label="Мы в Instagram">
-          <span class="social__icon--inst" class="social__icon social__icon--inst">
-            <svg class="social__icon--inst" width="16" height="16">
+          <span class="social__icon ">
+            <svg class="social__icon-inst" width="16" height="16">
               <use xlink:href="#social__icon--inst"/>
             </svg>
           </span>
         </a>
         <a class="social__link" href="#" aria-label="Мы в Facebook">
-          <span class="social__icon social__icon--fb">
-            <svg class="social__icon--fb" width="10" height="19">
+          <span class="social__icon">
+            <svg class="social__icon-fb" width="10" height="19">
               <use xlink:href="#social__icon--fb"/>
             </svg>
           </span>
