поправил зеленые линии, убрал паддинги в бургер-кнопке, поправил форму под pixel-perfect

--- a/source/form.html
+++ b/source/form.html
@@ -37,6 +37,7 @@
     document.createElement( "picture" );
   </script>
   <script src="js/picturefill.min.js" async></script>
+  <script src="js/script.js" async></script>
 </head>
 <body class="site-grid site-grid__wrapper">
   <svg style="display: none;">
@@ -76,7 +77,6 @@
       </g>
     </symbol>
   </svg>
-
   <header class="page-header page-header--no-promo page-header__container site-grid__wrapper">
     <div class="page-header__wrapper">
       <a class="page-header__logo-link" href="index.html">
@@ -263,6 +263,5 @@
       </div>
     </div>
   </footer>
-  <script src="js/script.js"></script>
 </body>
 </html>
