--- a/source/catalog.html
+++ b/source/catalog.html
@@ -37,6 +37,7 @@
     document.createElement( "picture" );
   </script>
   <script src="js/picturefill.min.js" async></script>
+  <script src="js/script.js" async></script>
 </head>
 <body class="site-grid site-grid__wrapper">
   <svg style="display: none;">
@@ -633,6 +634,5 @@
       </div>
     </div>
   </footer>
-  <script src="js/script.js"></script>
 </body>
 </html>
