--- a/source/index.html
+++ b/source/index.html
@@ -37,6 +37,7 @@
     document.createElement( "picture" );
   </script>
   <script src="js/picturefill.min.js" async></script>
+  <script src="js/script.js" async></script>
 </head>
 <body class="site-grid">
   <svg style="display: none;">
@@ -179,58 +180,62 @@
 
           <div class="example__slider slider">
             <div class="slider__images">
-              <picture>
-                <source type="image/webp" media="(min-width: 1440px)"
-                srcset="img/before-desktop@1x.webp 1x,
-                img/before-desktop@2x.webp 2x"/>
+<!--              <div class="slider__images-container">-->
+                <picture>
+                  <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/before-desktop@1x.webp 1x,
+                  img/before-desktop@2x.webp 2x"/>
 
-                <source type="image/webp" media="(min-width: 768px)"
-                srcset="img/before-tablet@1x.webp 1x,
-                img/before-tablet@2x.webp 2x"/>
+                  <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/before-tablet@1x.webp 1x,
+                  img/before-tablet@2x.webp 2x"/>
 
-                <source type="image/webp"
-                srcset="img/before-mobile@1x.webp 1x,
-                img/before-mobile@2x.webp 2x"/>
+                  <source type="image/webp"
+                  srcset="img/before-mobile@1x.webp 1x,
+                  img/before-mobile@2x.webp 2x"/>
 
-                <source media="(min-width: 1440px)"
-                srcset="img/before-desktop@1x.png 1x,
-                img/before-desktop@2x.png 2x"/>
+                  <source media="(min-width: 1440px)"
+                  srcset="img/before-desktop@1x.png 1x,
+                  img/before-desktop@2x.png 2x"/>
 
-                <source media="(min-width: 768px)"
-                srcset="img/before-tablet@1x.png 1x,
-                img/before-tablet@2x.png 2x"/>
+                  <source media="(min-width: 768px)"
+                  srcset="img/before-tablet@1x.png 1x,
+                  img/before-tablet@2x.png 2x"/>
 
-                <img class="slider__image slider__image--current"
-                src="img/before-mobile@1x.png"
-                srcset="img/before-mobile@2x.png 2x"
-                alt="Кот до правильного питания">
-              </picture>
-              <picture>
-                <source type="image/webp" media="(min-width: 1440px)"
-                srcset="img/after-desktop@1x.webp 1x,
-                img/after-desktop@2x.webp 2x"/>
+                  <img class="slider__image slider__image--before slider__image--current"
+                  src="img/before-mobile@1x.png"
+                  srcset="img/before-mobile@2x.png 2x"
+                  alt="Кот до правильного питания">
+                </picture>
+<!--              </div>-->
+<!--              <div class="slider__images-container">-->
+                <picture>
+                  <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="img/after-desktop@1x.webp 1x,
+                  img/after-desktop@2x.webp 2x"/>
 
-                <source type="image/webp" media="(min-width: 768px)"
-                srcset="img/after-tablet@1x.webp 1x,
-                img/after-tablet@2x.webp 2x"/>
+                  <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/after-tablet@1x.webp 1x,
+                  img/after-tablet@2x.webp 2x"/>
 
-                <source type="image/webp"
-                srcset="img/after-mobile@1x.webp 1x,
-                img/after-mobile@2x.webp 2x"/>
+                  <source type="image/webp"
+                  srcset="img/after-mobile@1x.webp 1x,
+                  img/after-mobile@2x.webp 2x"/>
 
-                <source media="(min-width: 1440px)"
-                srcset="img/after-desktop@1x.png 1x,
-                img/after-desktop@2x.png 2x"/>
+                  <source media="(min-width: 1440px)"
+                  srcset="img/after-desktop@1x.png 1x,
+                  img/after-desktop@2x.png 2x"/>
 
-                <source media="(min-width: 768px)"
-                srcset="img/after-tablet@1x.png 1x,
-                img/after-tablet@2x.png 2x"/>
+                  <source media="(min-width: 768px)"
+                  srcset="img/after-tablet@1x.png 1x,
+                  img/after-tablet@2x.png 2x"/>
 
-                <img class="slider__image"
-                src="img/after-mobile@1x.png"
-                srcset="img/after-mobile@2x.png 2x"
-                alt="Кот после правильного питания">
-              </picture>
+                  <img class="slider__image slider__image--after"
+                  src="img/after-mobile@1x.png"
+                  srcset="img/after-mobile@2x.png 2x"
+                  alt="Кот после правильного питания">
+                </picture>
+<!--              </div>-->
             </div>
             <div class="slider__wrapper">
               <div class="slider__buttons">
@@ -294,6 +299,5 @@
       </div>
     </div>
   </footer>
-  <script src="js/script.js"></script>
 </body>
 </html>
